--- a/DrugInfoWssServer.csproj
+++ b/DrugInfoWssServer.csproj
@@ -16,7 +16,6 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Web" />
-    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Data.SQLite">
       <HintPath>lib\System.Data.SQLite.dll</HintPath>
@@ -24,6 +23,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
+    <Compile Include="MiniJSON.cs" />
+    <Compile Include="SimpleJsonSerializer.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="server.pfx">
